--- a/public/wp-content/themes/aokranj/style.scss
+++ b/public/wp-content/themes/aokranj/style.scss
@@ -12,8 +12,93 @@
  Text Domain:  aokranj
 */
 
-// variables
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueThin.otf') format('opentype');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'GeogrotesqueUltraLight';
+  src: url('fonts/GeogrotesqueUltraLight.otf') format('opentype');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueLight.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueRegular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueMedium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueSemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueBold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueThinItalic.otf') format('opentype');
+  font-weight: 100;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueUltraLightItalic.otf') format('opentype');
+  font-weight: 200;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueLightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueRegularItalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueMediumItalic.otf') format('opentype');
+  font-weight: 500;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueSemiBoldItalic.otf') format('opentype');
+  font-weight: 600;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Geogrotesque';
+  src: url('fonts/GeogrotesqueBoldItalic.otf') format('opentype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+// variables
 $orange: #f7941e;
 $green: #8cc63f;
 $blue: #25aae1;
@@ -22,6 +107,14 @@ $purple: #e025df;
 $lightgray: #a7a9ac;
 $darkgray: #b4b4b4;
 
+// bootstrap variables
+$brand-primary: darken(#428bca, 6.5%) !default; // #337ab7
+$brand-success: #5cb85c !default;
+$brand-info: #5bc0de !default;
+$brand-warning: #f7941e !default;
+$brand-danger: #d9534f !default;
+
+// backgrounds
 .background-orange { background-color: $orange; }
 .background-green { background-color: $green; }
 .background-blue { background-color: $blue; }
@@ -29,8 +122,44 @@ $darkgray: #b4b4b4;
 .background-lightgray { background-color: $lightgray; }
 .background-darkgray { background-color: $darkgray; }
 
+// button
+.btn {
+  font-family: 'Geogrotesque';
+  letter-spacing: 1px;
+  font-weight: 500;
+  font-size: 16px;
+  // override
+  &.btn-primary { background-color: $brand-primary; border-color: $brand-primary; }
+  &.btn-success { background-color: $brand-success; border-color: $brand-success; }
+  &.btn-info    { background-color: $brand-info;    border-color: $brand-info;    }
+  &.btn-warning { background-color: $brand-warning; border-color: $brand-warning; }
+  &.btn-danger  { background-color: $brand-danger;  border-color: $brand-danger;  }
+  // bootstrap outline button
+  &.btn-outline {
+    &.btn-primary { background-color: transparent; color: $brand-primary; }
+    &.btn-success { background-color: transparent; color: $brand-success; }
+    &.btn-info    { background-color: transparent; color: $brand-info;    }
+    &.btn-warning { background-color: transparent; color: $brand-warning; }
+    &.btn-danger  { background-color: transparent; color: $brand-danger;  }
+
+    &:hover {
+      &.btn-primary { background-color: $brand-primary; color: #fff; }
+      &.btn-success { background-color: $brand-success; color: #fff; }
+      &.btn-info    { background-color: $brand-info;    color: #fff; }
+      &.btn-warning { background-color: $brand-warning; color: #fff; }
+      &.btn-danger  { background-color: $brand-danger;  color: #fff; }
+    }
+  }
+  // sharp
+  &.btn-sharp {
+    border-radius: 0;
+  }
+}
+
 // body
 body {
+  font-family: 'Geogrotesque';
+  font-size: 15px;
 
   // fix body padding on wide-nav
   @media screen and (min-width: 768px) and (max-width: 1006px) {
@@ -85,35 +214,62 @@ a {
 
 // headers
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-family: 'Geogrotesque';
 }
 
-// buttons
-.btn {
-	font-family: 'Open Sans', sans-serif;
-}
-
-// slider
+// slider on frontpage
 .carousel {
   box-shadow: 0 0 3px #ccc;
 
   .carousel-caption {
-    @media (min-width: 500px) and (max-width: 688px) {
-      padding-top: 0;
-    }
-  }
+    position: absolute;
+    top: 20%;
+    padding: 0;
 
-  .excerpt {
-    background: rgba(0, 0, 0, 0.5);
-    padding: 5px 10px;
-    //font-weight: 400;
-    margin-bottom: 20px;
-    p {
-      margin: 0;
+    @media (width: 640px) and (orientation: landscape){
+      top: 10%;
     }
-    @media (min-width: 680px) and (max-width: 768px) {
-      font-size: 2.4vw;
+
+    @media (min-width: 768px) {
+      top: 20%;
+    }
+
+    .slide-title {
+      margin-bottom: 0;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.6);
+      font-weight: 700;
+      font-family: 'Geogrotesque';
+    }
+
+    .excerpt {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 0 10px 15px 10px;
+      margin-bottom: 10px;
+      font-size: 2vw;
       line-height: 4vw;
+      font-weight: 400;
+      font-family: 'Geogrotesque';
+      p {
+        margin: 0;
+      }
+      @media (min-width: 768px) {
+        margin-bottom: 20px;
+      }
+      /*
+      @media (min-width: 680px) and (max-width: 768px) {
+        font-size: 2.4vw;
+        line-height: 4vw;
+      }
+      */
+    }
+
+    .call-to-action {
+      margin-top: 10px;
+      @media (min-width: 768px) {
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -127,115 +283,127 @@ h1, h2, h3, h4, h5, h6 {
       }
     }
   }
+
+  .carousel-indicators {
+    display: none;
+  }
 }
 
-// post list (frontpage, ???)
-.posts-list {
+// news list on frontpage
+.news-list {
+  //box-shadow: 0 0 3px #ccc;
+  border: 1px solid #d1d2d4;
+  padding: 30px;
 
-  &.news {
-    border-top: none;
-    padding: 0 0 40px 0;
+  h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: 'Geogrotesque';
+    color: $orange;
+  }
 
-    .highlight-title {
-      margin-top: 0;
-      margin-bottom: 0;
-    }
+  ul {
+    list-style: none;
+    margin: 20px 0;
+    padding: 0;
 
-    @media (min-width: 768px) {
-      padding-bottom: 60px;
-
-      .highlight-title {
-        margin-bottom: 20px;
+    li {
+      span {
+        font-size: 15px;
       }
-    }
-
-    .item-wrap {
-
-      .item {
-        color: #fff;
-
-        .title {
-          margin: 0;
-          padding: 12px;
-          border-bottom: 1px solid #fff;
-          background: $red;
-
-          &:last-child {
-            border-bottom: none;
-          }
-
-          .link {
-            line-height: 20px;
-            font-size: 18px;
-            font-weight: 400;
-            color: #fff;
-
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-
-          @media (min-width: 768px) {
-            padding: 16px;
-
-            .link {
-              line-height: 24px;
-              font-size: 22px;
-            }
+      h3 {
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        a {
+          display: inline-block;
+          color: #000;
+          line-height: 30px;
+          font-size: 18px;
+          font-weight: 500;
+          font-family: 'Geogrotesque';
+          &:hover {
+            text-decoration: underline;
           }
         }
       }
     }
   }
+}
+
+// post list on frontpage
+.posts-list {
 
   .highlight-title {
-    margin-bottom: 0;
+    display: none;
   }
 
-  @media (min-width: 768px) {
-    .highlight-title {
-      margin-bottom: 20px;
-    }
-  }
+  .item {
+    box-shadow: none;
+    border: 1px solid #d1d2d4 !important;
+    font-family: 'Geogrotesque';
 
-  .item-title {
-    padding: 30px 15px 0 15px;
-    font-weight: 100;
-    font-family: 'Open Sans', sans-serif;
-    a {
-      color: $orange;
-      font-size: 24px;
-      line-height: 26px;
-      font-weight: 300;
-
-      &:hover {
-        color: darken($orange, 10%);
+    .featured-image {
+      @media (min-width: 768px) {
+        display: none;
       }
     }
-  }
 
-  .author {
-    padding: 3px 15px 30px 15px;
-    font-size: 15px;
-    font-weight: 100;
-    font-family: 'Open Sans', sans-serif;
-    color: $lightgray;
-    @media (max-width: 992px) {
-      padding-bottom: 20px;
+    .item-title {
+      padding: 30px 30px 0 30px;
+      font-family: 'Geogrotesque';
+      a {
+        color: $orange;
+        font-size: 30px;
+        line-height: 30px;
+        font-weight: 300;
+        &:hover {
+          color: darken($orange, 10%);
+        }
+      }
     }
-    a {
+
+    .author {
+      padding: 5px 30px 30px 30px;
+      font-size: 15px;
+      font-family: 'Geogrotesque';
       color: $lightgray;
-      &:hover {
-        color: $blue;
+      a {
+        color: $lightgray;
+        &:hover {
+          color: $blue;
+        }
       }
+    }
+
+    .excerpt {
+      font-family: 'Geogrotesque';
+      font-size: 15px;
+      padding: 0 30px;
+      margin: 0;
+    }
+
+    .gallery {
+      display: none;
+      padding: 0 30px;
+      text-align: left;
+
+      @media (min-width: 768px) {
+        display: block;
+      }
+    }
+
+    .item-meta {
+      border-top: none;
+      margin-top: 0;
+      padding-top: 0;
+      font-family: 'Geogrotesque';
+      font-size: 15px;
     }
   }
 
-  .item-meta {
-    border-top: none;
-    margin-top: 0;
-    padding-top: 0;
-  }
 }
 
 // post entry
@@ -244,18 +412,7 @@ h1, h2, h3, h4, h5, h6 {
     a {
       font-size: 12px;
       font-weight: 400;
-      font-family: 'Open Sans', sans-serif;
-    }
-  }
-}
-
-// gallery
-#gallery-1 {
-
-  &.gallery-columns-3 {
-    .gallery-item {
-      width: auto !important;
-      max-width: 150px;
+      font-family: 'Geogrotesque';
     }
   }
 }
@@ -278,11 +435,13 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
   h3 {
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 26px;
+    line-height: 32px;
+    font-weight: 600;
     text-transform: none;
     padding: 16px 20px;
     border-bottom: 1px solid #fff;
+    font-family: 'Geogrotesque';
   }
   ul {
     padding: 0 20px;
@@ -299,6 +458,73 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // widgets
+
+.widget-reportaza {
+  border: 1px solid #d1d2d4;
+
+  ul {
+
+    li {
+      padding: 0;
+      border: none;
+
+      .pis-thumbnail {
+        .pis-thumbnail-link {
+          display: block;
+          .pis-thumbnail-img {
+            width: 100%;
+          }
+        }
+      }
+
+      .pis-title {
+        margin: 20px;
+        a {
+          font-family: 'Geogrotesque';
+          font-size: 32px;
+          line-height: 38px;
+          font-weight: 700;
+          color: $orange;
+        }
+
+        &:before {
+          content: 'Reportaža';
+          display: block;
+          margin-bottom: 5px;
+          font-size: 22px;
+          font-style: italic;
+          font-family: 'Geogrotesque';
+        }
+      }
+
+      .pis-excerpt {
+        margin: 25px 20px;
+        font-size: 15px;
+        font-family: 'Geogrotesque';
+      }
+
+      .pis-more {
+        display: block;
+        margin-top: 30px;
+        a {
+          display: inline-block;
+          text-transform: uppercase;
+          padding: 15px 20px;
+          border: 1px solid $brand-warning;
+          color: $brand-warning;
+          font-family: 'Geogrotesque';
+          letter-spacing: 1px;
+          font-weight: 500;
+          font-size: 16px;
+          &:hover {
+            background: $brand-warning;
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
+}
 
 .widget-blue {
   @include sidebar-widget($blue);
@@ -326,7 +552,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .widget_search {
   .form-group {
-    margin-bottom: 24px;
+    margin-bottom: 0;
   }
 }
 
