--- a/public/wp-content/themes/aokranj/style.css
+++ b/public/wp-content/themes/aokranj/style.css
@@ -269,26 +269,25 @@ h1, h2, h3, h4, h5, h6 {
     top: 20%;
     padding: 0;*/ }
     @media (width: 640px) and (orientation: landscape) {
-      .carousel .carousel-caption {
-        /*top: 10%;*/ } }
+      /*.carousel .carousel-caption {
+        top: 10%; }*/ }
     @media (min-width: 768px) {
-      .carousel .carousel-caption {
-        /*top: 20%;*/ } }
+      /*.carousel .carousel-caption {
+        top: 20%; }*/ }
     .carousel .carousel-caption .slide-title {
-      margin-bottom: 0;
+      /*margin-bottom: 0;
       padding: 10px;
       background: rgba(0, 0, 0, 0.6);
       font-weight: 700;
-      font-family: 'Geogrotesque'; }
+      font-family: 'Geogrotesque';*/ }
     .carousel .carousel-caption .excerpt {
-      background: rgba(0, 0, 0, 0.6);
+      /*background: rgba(0, 0, 0, 0.6);
       padding: 0 10px 15px 10px;
       margin-bottom: 10px;
-      /*font-size: 2vw;
-      line-height: 4vw;*/
+      font-size: 2vw;
+      line-height: 4vw;
       font-weight: 400;
       font-family: 'Geogrotesque';
-      /*
       @media (min-width: 680px) and (max-width: 768px) {
         font-size: 2.4vw;
         line-height: 4vw;
